--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,19 +35,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^1.14.1
-  firebase_auth: ^3.3.14
+  firebase_core: ^2.22.0
+  firebase_auth: ^4.14.0
   another_flushbar: ^1.10.28
-  cloud_firestore: ^3.1.12
+  cloud_firestore: ^4.13.1
   image_picker: ^0.8.5
-  firebase_storage: ^10.2.14
+  firebase_storage: ^11.5.1
   dio: ^4.0.6
   pie_chart: ^5.3.1
   syncfusion_flutter_charts: ^19.4.56
   sortedmap: ^0.5.1
   google_fonts: ^4.0.3
   dropdown_button2: ^1.6.3
-  firebase_core_platform_interface: 4.5.1
+  firebase_core_platform_interface: ^5.0.0
   modal_bottom_sheet: ^2.1.2
 
 dev_dependencies:
