--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   dropdown_button2: ^1.6.3
   firebase_core_platform_interface: ^5.0.0
   modal_bottom_sheet: ^2.1.2
+  autocomplete_textfield: ^2.0.1
+  flutter_typeahead: ^4.8.0
 
 dev_dependencies:
   flutter_test:
