--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   modal_bottom_sheet: ^2.1.2
   autocomplete_textfield: ^2.0.1
   flutter_typeahead: ^4.8.0
+  charts_flutter: ^0.12.0
 
 dev_dependencies:
   flutter_test:
