--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.0 <3.0.0'
+  sdk: '>=2.19.0 <3.24.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -46,12 +46,12 @@ dependencies:
   syncfusion_flutter_charts: ^19.4.56
   sortedmap: ^0.5.1
   google_fonts: ^4.0.3
-  dropdown_button2: ^1.6.3
+  dropdown_button2: ^2.3.9
   firebase_core_platform_interface: ^5.0.0
   modal_bottom_sheet: ^2.1.2
   autocomplete_textfield: ^2.0.1
   flutter_typeahead: ^4.8.0
-  charts_flutter: ^0.12.0
+  d_chart: ^2.8.0
 
 dev_dependencies:
   flutter_test:
