--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,9 @@ dependencies:
   autocomplete_textfield: ^2.0.1
   flutter_typeahead: ^4.8.0
   d_chart: ^2.8.0
+  googleapis: ^12.0.0
+  googleapis_auth: ^1.6.0
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
