--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = footwear
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.sushilkumarmalik.footwear
+PRODUCT_BUNDLE_IDENTIFIER = com.example.footwear
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2023 com.sushilkumarmalik. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2026 com.example. All rights reserved.
