--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,11 +89,11 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.sushilkumarmalik" "\0"
+            VALUE "CompanyName", "com.example" "\0"
             VALUE "FileDescription", "footwear" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "footwear" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2023 com.sushilkumarmalik. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2026 com.example. All rights reserved." "\0"
             VALUE "OriginalFilename", "footwear.exe" "\0"
             VALUE "ProductName", "footwear" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
